[package]
name = "md5"
version = "0.7.0"
license = "Apache-2.0/MIT"
authors = [
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Kamal Ahmad <shibe@openmailbox.org>",
    "Konstantin Stepanov <milezv@gmail.com>",
    "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
    "Nathan Musoke <nathan.musoke@gmail.com>",
    "Scott Mabin <scott@mabez.dev>",
    "Tony Arcieri <bascule@gmail.com>",
    "Wim de With <register@dewith.io>",
    "Yosef Dinerstein <yosefdi@gmail.com>",
]
description = "The package provides the MD5 hash function."
documentation = "https://docs.rs/md5"
homepage = "https://github.com/stainless-steel/md5"
repository = "https://github.com/stainless-steel/md5"
readme = "README.md"
categories = ["algorithms", "cryptography"]
keywords = ["checksum", "digest", "hash", "md5"]
edition = "2018"

[features]
default = ["std"]
std = ["sgx_tstd"]
with-testing = ["sgx_tstd", "testing"]

[dependencies.testing]
branch = "rsgx1.1.1"
git = "https://github.com/sammyne/testing-rsgx"
optional = true

[dependencies.sgx_tstd]
features = ["thread"]
git = "https://github.com/apache/teaclave-sgx-sdk"
optional = true
rev = "v1.1.1"
